# standalone-demo

./: .gitignore  CMakeLists.txt  README.md  config.local
debugfiles/: client-private-key  client-public-key  client.cfg  controller.cfg  server1-public-key  server2-public-key  server3-public-key  shared3p.cfg
secrec/: scalar_product.sc
src/: ScalarProduct.cpp
